# disp-refine-by-OT

./: .clang-format  .gitignore  CMakeLists.txt  README.md  disprefine.py  main.cpp  manifold_learning.py  mono_disparity_refine.py  onnx_infer.py  rectified_flow.py  research.ipynb  vis.ipynb
DL/: __init__.py  cli.py  inference.py  inference.sh
DL/depth_anything/: dpt.py
DL/depth_anything/util/: transform.py
DL/depth_anything_v2/dinov2_layers/: attention.py
DL/depth_pro/: __init__.py
data/11/: OT_minmax_0222_agg.mat  OT_minmax_0626_agg.mat  OT_normal_0222_agg.mat  OT_normal_0626_agg.mat  output_0222_DL.mat  output_0222_DL.npy  output_0222_agg_mask.mat  output_0626_DLV2.npy  scaled_0626_agg.mat
data/12/: OT_minmax_0222_agg.mat  OT_minmax_0626_agg.mat  OT_normal_0222_agg.mat  OT_normal_0626_agg.mat  output_0222_DL.mat  output_0222_DL.npy  output_0222_agg_mask.mat  output_0626_DLV2.npy  scaled_0222_agg.mat
data/19/: OT_minmax_0222_agg.mat  OT_minmax_0626_agg.mat  OT_normal_0222_agg.mat  OT_normal_0626_agg.mat  output_0222_DL.mat  output_0222_DL.npy  output_0222_agg_mask.mat  output_0626_DLV2.npy  scaled_0626_agg.mat
drot/: ot.py  plot.py  tune.py  util.py
matlab/: SGM.asv  SGM.m  h5reader.m  retrive_files.m  retrive_folders.m  test.m  vis.m
ot/: EMD.cpp  EMD.h  core.h  full_bipartitegraph.h  full_bipartitegraph_omp.h  interp2d.cpp  interp2d.h  mathdef.h  network_simplex_simple.h  network_simplex_simple_omp.h  ot.cpp  ot.h  pipe.cpp  pipe.h
sgm/: CMakeLists.txt  main.cpp  main_debug.cpp  sample_common.cpp  sample_common.h  sgm.py
